add meta tag and pointer cursor for song list

--- a/styles/song-list.css
+++ b/styles/song-list.css
@@ -64,8 +64,9 @@ td {
 tr button {
   border: none;
   background: none;
-  padding: 0;
   color: white;
+  cursor: pointer;
+  padding: 0;
 }
 
 tr button:focus {
